# entropy_game

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pythonapp.yml
examples/: test_game.py
src/: game.py  utils.py
test/: test_entropy.py
